把两种预约的show action统一到了orders controller

--- a/app/views/back/mystation/order_phones/edit.html.erb
+++ b/app/views/back/mystation/order_phones/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='box car-toolbox'>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group">
-      <%= link_to [:back, :mystation, @order_phone], {class: 'btn btn-default'} do%>
+      <%= link_to back_mystation_order_path(@order_phone), {class: 'btn btn-default'} do%>
         <i class="fa fa-info-circle"></i> <%= t('view.action.show_detail') %> 
       <% end %>
     </div>
