--- a/app/views/back/mystation/orders/_index_no_filter.html.erb
+++ b/app/views/back/mystation/orders/_index_no_filter.html.erb
@@ -1,6 +1,12 @@
 <%= grid @orders_grid, show_filters: :no do |g|
-  g.column name: Order.human_attribute_name(:id), attribute: "id"
-  g.column name: Order.human_attribute_name(:order_no), attribute: "order_no"
+  g.column name: Order.human_attribute_name(:order_no), attribute: "order_no" do |item|
+    if can? :read, item
+      link_to(item.order_no, back_mystation_order_path(item))
+    end
+  end
+  g.column name: Order.human_attribute_name(:status), attribute: "status", detach_with_id: :status_filter do |item|
+    render 'order_status_label', order: item
+  end
   g.column name: Order.human_attribute_name(:order_time), attribute: "order_time" do |item|
     l(item.order_time)
   end
@@ -11,7 +17,7 @@
   g.column do |item|
     links = []
     if can? :read, item
-      links << link_to(I18n.t('view.action.show'), [:back, :mystation, item])
+      links << link_to(I18n.t('view.action.show'), back_mystation_order_path(item))
     end
     if can? :update, item
       links << link_to(I18n.t('view.action.edit'), [:edit, :back, :mystation, item])
