--- a/app/views/back/mystation/orders/show.html.erb
+++ b/app/views/back/mystation/orders/show.html.erb
@@ -17,7 +17,7 @@
   <% end %>
   <% if can? :cancel, @order %>
     <div class="btn-group">
-      <%= link_to cancel_back_mystation_order_path(@order), {method: :put,
+      <%= link_to cancel_back_mystation_order_path(@order), {method: :patch,
       data: { confirm: t('view.confirm.order.cancel')},  class: 'btn btn-default'} do %>
         <i class="glyphicon glyphicon-remove"></i> <%= t('view.action.cancel') %> 
       <% end %>
@@ -25,13 +25,13 @@
   <% end %>
     <div class="btn-group">
       <% if can? :check, @order %>
-        <%= link_to check_back_mystation_order_path(@order), {method: :put,
+        <%= link_to check_back_mystation_order_path(@order), {method: :patch,
         data: { confirm: t('view.confirm.order.check')},  class: 'btn btn-default'} do %>
           <i class="ion ion-happy"></i> <%= t('view.action.car_checked') %> 
         <% end %>
       <% end %>
       <% if can? :missit, @order%>
-        <%= link_to missit_back_mystation_order_path(@order), {method: :put,
+        <%= link_to missit_back_mystation_order_path(@order), {method: :patch,
         data: { confirm: t('view.confirm.order.missit')},  class: 'btn btn-default'} do %>
           <i class="ion ion-sad"></i> <%= t('view.action.missit') %> 
         <% end %>
