前台用户预约时业务check追加，比如预约超过次数，车已经预约，时间段已被预约

--- a/app/views/front/station/steps/_form_step_select_date.html.erb
+++ b/app/views/front/station/steps/_form_step_select_date.html.erb
@@ -1,5 +1,7 @@
 <% if @order && @order.errors[:order_time].present? %>
-  <div class="alert alert-danger"><%= t('view.alert.order.order_time_blank')%></div>
+<div class="alert alert-danger">
+  <%= @order.errors[:order_time][0]%>
+</div>
 <% end %>
 
 <div class="row">
