--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -59,7 +59,7 @@
             <%=image_tag "road_sign2.png"%>
           </div>
           <div id="road-sign1">
-            <a href="<%= front_station_index_path %>" class="shake shake-car-horizontal hover-stop">
+            <a href="<%= front_stations_path %>" class="shake shake-car-horizontal hover-stop">
               <%=image_tag "road_sign1.png"%>
             </a>
           </div>
