--- a/app/views/front/_sidebar.html.erb
+++ b/app/views/front/_sidebar.html.erb
@@ -5,8 +5,8 @@
                 <%= link_to catagory.name, front_catagory_path(catagory) %>
               </li>
             <% end %>
-              <li class="<%= current_nav_class(front_station_index_path)%>">
-                <%= link_to Station.model_name.human, front_station_index_path %>
+              <li class="<%= current_nav_class(front_stations_path)%>">
+                <%= link_to Station.model_name.human, front_stations_path %>
               </li>
               <li class="<%= current_nav_class(front_question_index_faq_path)%> <%= current_nav_class(front_question_index_uaq_path)%>">
                 <%= link_to "提问留言", front_question_index_faq_path %>
