--- a/app/views/front/stations/index.html.erb
+++ b/app/views/front/stations/index.html.erb
@@ -73,11 +73,18 @@
                   <div class='logo'>
                     <%= image_tag 'weixiu.png', {class: 'img-thumbnail'} %>
                     <div class='action text-center'>
-                      <%= link_to "在线预定", new_front_station_order_path(s), class: "btn btn-primary" %>
+                      <%= link_to t("view.action.order_online"), new_front_station_order_path(s), class: "btn btn-primary" %>
                     </div>
                   </div>
                   <div class='info'>
-                    <div class='title'><h4><%= s.name %></h4></div>
+                    <div class='title'>
+                      <h4>
+                        <%= s.name %>
+                        <span>
+                        [<%= link_to t("view.action.detail"), [:front, s] %>]
+                        </span>
+                      </h4>
+                    </div>
                     <p>详细地址：<%= s.address_text %></p>
                     <p>联系电话：<%= s.telephone %></p>
                     <p>简单介绍：<%= s.recommend.present? ? s.recommend : '暂无' %></p>
