添加了station logo字段

--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -57,3 +57,12 @@ sup.unit {
   height: auto;
   display: inline-block;
 }
+
+// -----------------------------------------
+// 明细画面显示的logo 
+// -----------------------------------------
+.car-logo-group {
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center;
+}
