--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -250,3 +250,10 @@ form#sign_in_remote_form_phone .car-error-tip {
 .station-recommend > .recommend {
   padding: 5px 10px;
 }
+// -----------------------------------------
+// 车检站明细画面的图片展示
+// -----------------------------------------
+img.station-pictures {
+  width: 525px !important;
+  height: 290px !important;
+}
