车检站后台地图信息编辑和显示

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -209,3 +209,11 @@ footer {
   background-position: -144px 0;
 }
 
+
+// -----------------------------------------
+// 地图
+// -----------------------------------------
+#allmap {
+  width: 100%;
+  height: 100%;
+}
