--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -66,3 +66,10 @@ sup.unit {
   margin-right: 10px;
   text-align: center;
 }
+
+// -----------------------------------------
+// 地图wrapper
+// -----------------------------------------
+.car-map-wrapper {
+  height: 400px;
+}
