--- a/app/views/back/mystation/stations/show.html.erb
+++ b/app/views/back/mystation/stations/show.html.erb
@@ -1,3 +1,6 @@
+<%= content_for :head_javascript do %>
+  <%= render "common/baidu_map/script_link"%>
+<%end%>
 <div class='box car-toolbox'>
   <div class="btn-toolbar" role="toolbar">
     <% if can? :edit, @station %>
@@ -51,5 +54,12 @@
         <span><%= t('view.label.thumb') %></span>
       </div>
     </dd>
+    <% if @station.has_map_info? %>
+      <dt><%= t('view.label.map_info')%></dt>
+      <dd>
+        <div id="allmap" style="height: 300px;"></div>
+      </dd>
+      <%= render "common/baidu_map/station_map_show_only", station: @station%>
+    <% end %>
   </dl>
 </div>
