--- a/app/views/front/stations/show.html.erb
+++ b/app/views/front/stations/show.html.erb
@@ -1,6 +1,16 @@
-<%= content_for :head_javascript do %>
-  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=IGhkZcALWGBLsua1oBE4KXb7"></script>
+<%= content_for :head_stylesheet do %>
+  <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 <%end%>
+<%= content_for :head_javascript do %>
+  <%= render "common/baidu_map/script_link"%>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+<%end%>
+
+<style type="text/css">
+  // body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;}
+  #allmap{height:100%;width:78%;float:left;border-right:2px solid #bcbcbc;}
+  #r-result{height:100%;width:20%;float:left;}
+</style>
 
 <div class="row">
   <% if @station.pictures.present? %>
@@ -42,7 +52,7 @@
   <div class="col-sm-6">
     <h3><%= @station.name %></h3>
     <hr>
-    <p>详细地址：<%= @station.address_text %></p>
+    <p>详细地址：<%= @station.address_text %>&nbsp;&nbsp;&nbsp;&nbsp;[<a href="#station_map"><%= t('view.label.map')%></a>]</p>
     <p>联系电话：<%= @station.telephone %></p>
     <br>
     <div class='action'>
@@ -60,22 +70,64 @@
   </div>
 </div>
 
-<div class="row station-area-for-show">
+<% if @station.has_map_info? %>
+<div class="row station-area-for-show" id="station_map">
   <div class="title">
-    <h4>车检站地图</h4>
+    <h4>车检站地图&nbsp;&nbsp;<small style="color: white;">[<%= @station.address_text %>]</small></h4>
   </div>
   <div class="recommend col-sm-12">
-    <div id="allmap" style="width: 100%; height:400px;"></div>
+    <div id="allmap" style="width: 78%; height:400px;"></div>
+    <div id="r-result"></div>
+  </div>
+</div>
+
+<div id="stationMapWindow" style="display: none;">
+  <div style="margin:0;line-height:20px;padding:2px;">
+    <%= image_tag @station.logo.url(:thumb), style: "float:right;zoom:1;overflow:hidden;width:90px;height:60px;margin-left:3px;"  %>
+    地址：<%= @station.address_text%>
+    <br/>
+    电话：<%= @station.telephone %>
   </div>
 </div>
 
 <script type="text/javascript">
+$(document).ready(function(){
+  // 创建Map实例
+  var map = new BMap.Map("allmap", {minZoom:10,maxZoom:16});
+  //添加默认缩放平移控件
+  map.addControl(new BMap.NavigationControl());
+  //启用滚轮放大缩小
+  map.enableScrollWheelZoom();
+  // 创建点坐标
+  var point = new BMap.Point(<%= @station.jingdu%>, <%= @station.weidu%>);
+  map.addOverlay(new BMap.Marker(point));
+  // 初始化地图,设置中心点坐标和地图级别。
+  map.centerAndZoom(point,15);
 
-  // TODO dairg 地图事例
-  // 百度地图API功能
-  var map = new BMap.Map("allmap");            // 创建Map实例
-  var point = new BMap.Point(116.404, 39.915); // 创建点坐标
-  map.centerAndZoom(point,15);                 // 初始化地图,设置中心点坐标和地图级别。
-  map.enableScrollWheelZoom();                 //启用滚轮放大缩小
+  var content = $("#stationMapWindow").html();
 
+  //创建检索信息窗口对象
+  var searchInfoWindow = null;
+  searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
+    title  : "<%= @station.name %>",      //标题
+    width  : 340,             //宽度
+    height : 95,              //高度
+    panel  : "r-result",         //检索结果面板
+    enableAutoPan : true,     //自动平移
+    searchTypes   :[
+//      BMAPLIB_TAB_SEARCH,   //周边检索
+      BMAPLIB_TAB_TO_HERE  //到这里去
+//      BMAPLIB_TAB_FROM_HERE //从这里出发
+    ]
+  });
+  var marker = new BMap.Marker(point); //创建marker对象
+  marker.enableDragging(); //marker可拖拽
+  marker.addEventListener("click", function(e){
+    searchInfoWindow.open(marker);
+  })
+  map.addOverlay(marker); //在地图中添加marker
+  searchInfoWindow.open(marker); //在marker上打开检索信息串口
+
+});
 </script>
+<% end%>
