--- a/app/assets/stylesheets/front.css.scss
+++ b/app/assets/stylesheets/front.css.scss
@@ -8,6 +8,8 @@
 @import "adminlte/iCheck/square/green";
 @import "csshake/csshake";
 @import "bootstrap-datetimepicker";
+// 百度地图关联
+@import "baidu_map/SearchInfoWindow";
 
 @import "front/car_override";
 
