--- a/app/views/front/stations/show.html.erb
+++ b/app/views/front/stations/show.html.erb
@@ -1,15 +1,6 @@
-<%= content_for :head_stylesheet do %>
-  <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
-<%end%>
-<%= content_for :head_javascript do %>
-  <%= render "common/baidu_map/script_link"%>
-  <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
-<%end%>
-
 <style type="text/css">
-  // body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;}
-  #allmap{height:100%;width:78%;float:left;border-right:2px solid #bcbcbc;}
-  #r-result{height:100%;width:20%;float:left;}
+  #allmap{float:left;}
+  #r-result{height:400px;width:20%;float:left;overflow: scroll;}
 </style>
 
 <div class="row">
@@ -74,6 +65,7 @@
 <div class="row station-area-for-show" id="station_map">
   <div class="title">
     <h4>车检站地图&nbsp;&nbsp;<small style="color: white;">[<%= @station.address_text %>]</small></h4>
+    <button id="refresh_map" class="btn btn-danger">刷新</button>
   </div>
   <div class="recommend col-sm-12">
     <div id="allmap" style="width: 78%; height:400px;"></div>
@@ -92,42 +84,53 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-  // 创建Map实例
-  var map = new BMap.Map("allmap", {minZoom:10,maxZoom:16});
-  //添加默认缩放平移控件
-  map.addControl(new BMap.NavigationControl());
-  //启用滚轮放大缩小
-  map.enableScrollWheelZoom();
-  // 创建点坐标
-  var point = new BMap.Point(<%= @station.jingdu%>, <%= @station.weidu%>);
-  map.addOverlay(new BMap.Marker(point));
-  // 初始化地图,设置中心点坐标和地图级别。
-  map.centerAndZoom(point,15);
+  function initMap() {
+    // 创建Map实例
+    var map = new BMap.Map("allmap", {minZoom:10,maxZoom:16});
+    //添加默认缩放平移控件
+    map.addControl(new BMap.NavigationControl());
+    //启用滚轮放大缩小
+    map.enableScrollWheelZoom();
+    // 创建点坐标
+    var point = new BMap.Point(<%= @station.jingdu%>, <%= @station.weidu%>);
+    map.addOverlay(new BMap.Marker(point));
+    // 初始化地图,设置中心点坐标和地图级别。
+    map.centerAndZoom(point,15);
 
-  var content = $("#stationMapWindow").html();
+    var content = $("#stationMapWindow").html();
 
-  //创建检索信息窗口对象
-  var searchInfoWindow = null;
-  searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
-    title  : "<%= @station.name %>",      //标题
-    width  : 340,             //宽度
-    height : 95,              //高度
-    panel  : "r-result",         //检索结果面板
-    enableAutoPan : true,     //自动平移
-    searchTypes   :[
-//      BMAPLIB_TAB_SEARCH,   //周边检索
-      BMAPLIB_TAB_TO_HERE  //到这里去
-//      BMAPLIB_TAB_FROM_HERE //从这里出发
-    ]
+    //创建检索信息窗口对象
+    var searchInfoWindow = null;
+    searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
+      title  : "<%= @station.name %>",      //标题
+      width  : 290,             //宽度
+      height : 105,              //高度
+      panel  : "r-result",         //检索结果面板
+      enableAutoPan : true,     //自动平移
+      searchTypes   :[
+        BMAPLIB_TAB_SEARCH,   //周边检索
+        BMAPLIB_TAB_TO_HERE,  //到这里去
+        BMAPLIB_TAB_FROM_HERE //从这里出发
+      ]
+    });
+    var marker = new BMap.Marker(point); //创建marker对象
+    marker.enableDragging(); //marker可拖拽
+    marker.addEventListener("click", function(e){
+      searchInfoWindow.open(marker);
+    })
+    map.addOverlay(marker); //在地图中添加marker
+    searchInfoWindow.open(marker); //在marker上打开检索信息串口
+  };
+
+
+  $("#refresh_map").click(function(){
+    initMap();
   });
-  var marker = new BMap.Marker(point); //创建marker对象
-  marker.enableDragging(); //marker可拖拽
-  marker.addEventListener("click", function(e){
-    searchInfoWindow.open(marker);
-  })
-  map.addOverlay(marker); //在地图中添加marker
-  searchInfoWindow.open(marker); //在marker上打开检索信息串口
+  initMap();
 
 });
 </script>
+
+<%= render "common/baidu_map/script_link"%>
+<%= javascript_include_tag 'baidu_map/SearchInfoWindow', 'data-turbolinks-track' => false %>
 <% end%>
