--- a/app/views/front/user/dashboard/index.html.erb
+++ b/app/views/front/user/dashboard/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Front::User::Dashboard#index</h1>
-<p>Find me in app/views/front/user/dashboard/index.html.erb</p>
+<div class="row">
+  <div class="box box-primary">
+    <div class="box-header">
+      <i class="ion ion-bag"></i>
+      <h3 class="box-title"><%= t('view.label.orders_checking')%></h3>
+    </div>
+    <div class="box-body no-padding">
+      <div class="table-responsive">
+        <!-- .table - Uses sparkline charts-->
+        <table class="table table-striped">
+          <tr>
+            <th><%= Order.human_attribute_name(:order_no) %></th>
+            <th><%= Order.human_attribute_name(:order_time) %></th>
+            <th><%= Station.model_name.human%></th>
+            <th><%= Order.human_attribute_name(:car_number) %></th>
+          </tr>
+          <% @orders.each do |item| %>
+            <tr>
+              <td><%= link_to item.order_no, front_user_order_path(item)%></td>
+              <td><%= l(item.order_time)%></td>
+              <td><%= item.station.name%></td>
+              <td><%= item.car_number%></td>
+            </tr>
+          <% end %>
+        </table><!-- /.table -->
+      </div>
+    </div><!-- /.box-body-->
+  </div><!-- /.box -->
+</div>
