station 明细画面的refresh按钮

--- a/app/views/front/stations/index.html.erb
+++ b/app/views/front/stations/index.html.erb
@@ -81,7 +81,7 @@
                       <h4>
                         <%= s.name %>
                         <span>
-                          [<%= link_to t("view.action.detail"), [:front, s] %>]
+                          [<%= link_to t("view.action.detail"), [:front, s], {"data-no-turbolink" => ""} %>]
                         </span>
                       </h4>
                     </div>
