--- a/app/views/layouts/front/_footer.html.erb
+++ b/app/views/layouts/front/_footer.html.erb
@@ -2,5 +2,6 @@
       <div class="clearfix"></div>
       <footer class='text-center'>
         <p>&copy; 2014 西安车辆年检Company, Inc.</p>
+        <p><a href="<%= t('view.site.beian_site')%>" target="_blank"><%= t('view.site.beianhao')%></a></p>
         <p>&middot; <a href="#">联系我们</a> &middot; <a href="#">技术支持</a></p>
       </footer>
