--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to t('view.site.front_title'), root_path, {class: 'navbar-brand', style: "color:white;"} %>
+          <%= link_to t('view.site.front_title'), root_path, {class: 'navbar-brand navbar-logo'} %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -47,9 +47,9 @@
               </div>
             <% else %>
               <a id="btn_sign_in" class="btn btn-danger btn-sm"><%= t('view.action.sign_in')%></a>
-              <a style="margin: 0px 8px;">|</a>
+              <a style="margin: 0px 8px; color: #000;">|</a>
               <%= link_to t('view.action.sign_up'), new_user_registration_path,
-                class: "btn btn-success btn-sm" %>
+              class: "btn btn-success btn-sm"%>
             <% end %>
           </div>
         </div><!--/.nav-collapse -->
