--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -8,7 +8,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to t('view.site.front_title'), root_path, {class: 'navbar-brand navbar-logo'} %>
+          <div style="float: left;">
+          <%# link_to t('view.site.front_title'), root_path, {class: 'navbar-brand navbar-logo'} do %>
+          <%= link_to root_path, {class: 'navbar-brand navbar-logo'} do %>
+          <%= image_tag "site_logo.jpg"%>
+          <%= t('view.site.front_title') %>
+          <% end %>
+          </div>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
